tests/kulezi_tests/bad/bad_inheritance001.lat
class A {
    int a;
    int b;
    void xd(int a, int b) {}
}

class B extends A {
    int a;
    int b;
    void xd(int a, int b, int c) {}
}

int main() {}